objects/Activity_Recap__c.object
<CustomObject>
    <description>It stores the narrative fields of the Activity Recap.</description>
    <fields>
        <fullName>Activity_Overview__c</fullName>
        <label>Activity Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CampaignId__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activities Recap</relationshipLabel>
        <relationshipName>Activities_Recap</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunities_for_Improvement__c</fullName>
        <label>Opportunities for Improvement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stories_Notes__c</fullName>
        <label>Stories/Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strength_Weaknesses__c</fullName>
        <label>Strength/Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Activity Recap</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Activity Recap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities Recap</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>